# nmslib

./: .appveyor.yml  .gitignore  .pypirc  .travis.yml  Dockerfile  LICENSE  README.md  compose.yaml
similarity_search/: .cproject  .project  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FindGSL.cmake  NonMetricSpaceLib.sln
similarity_search/apps/: CMakeLists.txt  bench_distfunc.cc  bench_distfunc.vcxproj  bench_projection.cc  check_convert_sparse.cc  convert_sparse.cc  convert_sparse_bin2txt.cc  convert_sparse_txt2bin.cc  dummy_app.cc  experiment.vcxproj  gold_stand_stat.cc  knn_stat.cc  main.cc  report_intr_dim.cc  sparse_bindata_stat.cc  test_clust.cc  tune_vptree.cc
similarity_search/boost_1_55_0/: CMakeLists.txt
similarity_search/falconn/: falconn_global.h
similarity_search/falconn/core/: composite_hash_table.h  polytope_hash.h  prefetchers.h
similarity_search/falconn/ffht/: LICENSE.md  _ffht.c  fht_impl.h  test.cpp
similarity_search/include/: cluster_util.h  cmd_options.h  distcomp.h  distcomp_edist.h  eval_metrics.h  eval_results.h  eval_results.h.new  experimentconf.h  experiments.h  falconn_heap_mod.h  fastscancount.h  fastscancount_avx2.h  flexbuff.h  floatdiff.h  global.h  gold_standard.h  hnswquery.h  idtype.h  incremental_quick_select.h  index.h  init.h  inmem_inv_index.h  knnquery.h  knnqueue.h  logging.h  memory.h  meta_analysis.h  methodfactory.h  mt19937ar.h  my_isnan_isinf.h  object.h  params.h  params_cmdline.h  params_def.h  permutation_type.h  permutation_utils.h  portable_align.h  portable_intrinsics.h  portable_popcount.h  portable_prefetch.h  (+25 more)
similarity_search/include/conv-c2d/: Makefile-bsd  Makefile-cent  Makefile-fugaku  Makefile-zynq  conv-c2d  conv-c2d-bsd  conv-c2d-cent  conv-c2d-fugaku  conv-c2d-zynq  conv-c2d.h  conv-c2d.l  conv-c2d.y  emax7.c  emax7.h  emax7lib.h  main.c
similarity_search/include/conv-mark/: conv-mark
similarity_search/include/factory/: init_methods.h  init_spaces.h
similarity_search/include/falconn/: VERSION  eigen_wrapper.h  falconn_global.h  lsh_nn_table.h
similarity_search/include/flash_lsh/: FrequentItems.h  LSH.h  LSHReservoirSampler.h  LSHReservoirSampler_config.h  MatMul.h  indexing.h  misc.h
similarity_search/include/method/: bbtree.h  blkmax_inverted_index.h  dummy.h  falconn.h  flash_lsh.h  ghtree.h  hnsw.h  hnsw_distfunc_mv.h  hnsw_distfunc_opt.h  hnsw_distfunc_opt_impl_inline.h  inverted_index.h  lcstrategy.h  list_clusters.h  lsh.h  lsh_multiprobe.h  lsh_space.h  metrized_small_world.h  multi_index.h  multi_vantage_point_tree.h  multi_vantage_point_tree_utils.h  napp_optim.h  nndes.h  nndes_old.h  nonmetr_list_clust.h  omedrank.h  perm_bin_vptree.h  perm_index_incr_bin.h  perm_lsh_bin.h  perm_type.h  permutation_index.h  permutation_index_incremental.h  permutation_inverted_index.h  permutation_prefix_index.h  permutation_utils.h  permutation_vptree.h  pivot_neighb_common.h  pivot_neighb_horder_closepiv_invindx.h  pivot_neighb_horder_common.h  pivot_neighb_horder_hashpiv_invindx.h  pivot_neighb_horder_invindx.h  (+17 more)
similarity_search/include/nndes/: nndes-common.h  nndes.h
similarity_search/include/space/: space_ab_diverg.h  space_bit_hamming.h  space_bit_jaccard.h  space_bit_vector.h  space_bregman.h  space_dummy.h  space_js.h  space_l2sqr.h  space_l2sqr_sift.h  space_leven.h  space_lp.h  space_rank_correl.h  space_renyi_diverg.h  space_scalar.h  space_sift_vector.h  space_sparse_bin_common.h  space_sparse_cosine.h  space_sparse_dense_fusion.h  space_sparse_jaccard.h  space_sparse_lp.h  space_sparse_scalar.h  space_sparse_scalar.h.my  space_sparse_scalar_bin.h  space_sparse_scalar_bin_fast.h  space_sparse_scalar_fast.h  space_sparse_vector.h  space_sparse_vector_inter.h  space_sqfd.h  space_string.h  space_vector.h  space_vector_gen.h  space_word_embed.h
similarity_search/include/trigen/: cAbstractRandomGenerator.h  cApproximatedModifier.h  cArray.h  cDistance.h  cRBQModifier.h  cSPModifier.h  cTriGen.h  cUniformRandomGenerator.h  utils.h
similarity_search/launches/: sample.launch
similarity_search/lshkit/: CMakeLists.txt
similarity_search/lshkit/include/: lshkit.h
similarity_search/lshkit/src/: apost.cpp  char_bit_cnt.cpp  kdtree.c  kdtree.cpp  kdtree.h  mplsh-model.cpp  mplsh.cpp  vq.cpp
similarity_search/lshkit/tools/: CMakeLists.txt  apost-run.cpp  dump-query.cpp  embed.cpp  fitdata.cpp  forest-run.cpp  lsh-run.cpp  mplsh-predict.cpp  mplsh-run.cpp  mplsh-tune.cpp  run-spectral.cpp  scan.cpp  sketch-run.cpp  txt2bin.cpp
similarity_search/src/: CMakeCache.txt  CMakeLists.txt  NonMetricSpaceLib.vcxproj  NonMetricSpaceLib.vcxproj.filters  cluster_util.cc  distcomp.cc  distcomp_bregman.cc  distcomp_cosine.cc  distcomp_diverg.cc  distcomp_edist.cc  distcomp_jaccard.cc  distcomp_js.cc  distcomp_l2sqr_sift.cc  distcomp_lp.cc  distcomp_overlap.cc  distcomp_rankcorr.cc  distcomp_scalar.cc  distcomp_sift_l2sqr.cc  distcomp_sparse_scalar_fast.cc  dummy_app.vcxproj  dummy_app.vcxproj.filters  experiment.vcxproj  experiment.vcxproj.filters  experimentconf.cc  global.cc  hnswquery.cc  init.cc  knnquery.cc  logging.cc  main.cc  memory.cc  mt19937ar.cc  params.cc  params_cmdline.cc  projection.cc  query.cc  randproj_util.cc  rangequery.cc  rbo.cc  report_intr_dim.cc  (+6 more)
similarity_search/src/flash_lsh/: FrequentItems.cpp  LSH.cpp  LSHReservoirSampler.cpp  LSHReservoirSampler_helpers.cpp  LSHReservoirSampler_init.cpp  LSHReservoirSampler_misc.cpp  (+6 more)
similarity_search/test/: CMakeLists.txt  bench_distfunc.cc  bench_distfunc.vcxproj  bench_projection.cc  bunit.cc  bunit.h  bunit.vcxproj  bunit.vcxproj.filters  common.h  genrand_vect.h  report_intr_dim.cc  sample_run.sh  test_clust.cc  test_distfunc.cc  test_editdist.cc  test_eval.cc  test_falconn.cc  test_falconn_heap.cc  test_fp.cc  test_integr.cc  test_integr.vcxproj  test_integr_util.h  test_jaccard.cc  test_lpnorm.cc  test_object.cc  test_overlap.cc  test_pow.cc  test_proj.cc  test_qa1_dist.cc  test_rbo.cc  test_some_stat.cc  test_space_scalar.cc  test_space_serial.cc  test_sqfd.cc  test_thread_pool.cc  test_timer.cc  testdataset.h
(+713 files in other folders)
